swipper shop styles update

--- a/resources/scss/pages/shop.scss
+++ b/resources/scss/pages/shop.scss
@@ -529,12 +529,17 @@
   background-color:rgb(0, 0, 0);
   border-radius: 0;
 
+  &.modal-window--open {
+    display: flex;
+    align-items: center;
+  }
+
   &_img {
     width: 100%;
     // width: 94%;
     // max-width: 100%;
     margin: auto;
-    height: 100vh;
+    height: 100%;
     object-fit: contain;
     color: transparent;
     z-index: 2;
@@ -559,7 +564,7 @@
   }
 
   .swiper-pagination {
-    bottom: 2em !important;
+    bottom: 0 !important;
     background-color:rgb(0, 0, 0, 0.5);
   }
 
