--- a/resources/scss/pages/shop.scss
+++ b/resources/scss/pages/shop.scss
@@ -537,12 +537,12 @@
 
 .photos {
   max-width: 100%;
-  width: auto;
+  width: 100vw;
   height: 100vh;
   // max-height: 100vh;
   // height: auto;
   padding: 0;
-  padding-bottom: 2em;
+  // padding-bottom: 2em;
   background-color:rgb(0, 0, 0);
   border-radius: 0;
 
@@ -574,19 +574,19 @@
       font-size: 1.5em;
     }
     @media(min-width: 992px) {
-      // top: 0;
+      top: 0;
       width: 3em;
-      height: 3em;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: rgba(0, 0, 0, 0.5);
-      border-radius: 100%;
+      // border-radius: 100%;
     }
   }
 
   .swiper-pagination {
-    bottom: 0 !important;
+    bottom: 1em !important;
     background-color:rgb(0, 0, 0, 0.5);
   }
 
