--- a/resources/scss/layouts/header.scss
+++ b/resources/scss/layouts/header.scss
@@ -12,12 +12,54 @@
   }
 
   &-city {
-    display: none;
-    @media(min-width: 768px) {
+    position: relative;
+    // display: none;
+    // @media(min-width: 768px) {
       width: max-content;
       margin-left: auto;
       display: inline-block;
       text-align: right;
+    // }
+
+    &-popup {
+      position: absolute;
+      bottom: -9.5em;
+      right: 2em;
+      padding: 1em;
+      padding-top: 2.5em;
+      border: 1px solid $secondary;
+      border-radius: 1em;
+      background-color: $light;
+      opacity: 1;
+      visibility: visible;
+      pointer-events: all;
+      &::before {
+        content: '';
+        position: absolute;
+        right: 26px;
+        top: -9px;
+        width: 1em;
+        height: 1em;
+        border-bottom: 1px solid $secondary;
+        border-left: 1px solid $secondary;
+        background-color: $light;
+        transform: rotate(135deg);
+      }
+
+      &.hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+      }
+
+      &_close {
+        top: 0;
+        right: 0;
+      }
+
+      &_label {
+        white-space: nowrap;
+      }
     }
   }
 
