--- a/resources/scss/pages/shop.scss
+++ b/resources/scss/pages/shop.scss
@@ -410,7 +410,7 @@
   }
 
   &_subitem {
-    padding-left: 2em;
+    padding-left: 13%;
     font-size: 1em;
   }
 
@@ -614,7 +614,14 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../assets/images/Loading_black.gif');
-  background-repeat: no-repeat;
-  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-image: url('../assets/images/Loading_black.gif');
+  // background-repeat: no-repeat;
+  // background-position: center;
+
+  // &_img {
+  //   color: transparent;
+  // }
 }
