--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,6 +14,7 @@
 @import "./components/burger.scss";
 @import "./components/nav-menu.scss";
 @import "./components/button-fixed-bottom.scss";
+@import "./components/similar-card.scss";
 
 @import "./filters/filters.scss";
 
