--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -27,6 +27,7 @@
 
 @import "./pages/home.scss";
 @import "./pages/shop.scss";
+@import "./pages/404.scss";
 
 @import "./auth.scss";
 @import "./styles.scss";
