--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -24,6 +24,7 @@
 @import "./layouts/aside.scss";
 @import "./layouts/nav-bar.scss";
 @import "./layouts/similar.scss";
+@import "./layouts/admin-panel.scss";
 
 @import "./pages/home.scss";
 @import "./pages/shop.scss";
