--- a/resources/scss/layouts/admin-panel.scss
+++ b/resources/scss/layouts/admin-panel.scss
@@ -1,3 +1,75 @@
 .admin-panel {
-    background-color: $secondary;
+  padding: 1em 0;
+  background-color: $gray-400;
+
+  &_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &-search {
+    position: relative;
+    margin-left: auto;
+
+    &_form {
+      position: relative;
+      display: flex;
+    }
+
+    &_input {
+      max-width: 15em;
+
+      & input {
+        border: 1px solid $secondary;
+        border-radius: 0;
+      }
+
+      & input::placeholder {
+        text-align: right;
+      }
+    }
+
+    &_loader {
+      position: absolute;
+      width: 2.22em;
+      top: 1px;
+      right: 1px;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
+    &_list {
+      position: absolute;
+      top: 2.4em;
+      left: 0;
+      width: 100%;
+      max-height: 30em;
+      padding: 0;
+      list-style: none;
+      background-color: $light;
+      border: 1px solid $secondary;
+      z-index: 10;
+      overflow-y: auto;
+    }
+
+    // &_item {
+    //   padding: 1em;
+    // }
+
+    &_item:not(:last-child) {
+      border-bottom: 1px solid $gray-400;
+    }
+
+    &_link {
+      width: 100%;
+      height: 100%;
+      padding: 1em;
+      display: inline-block;
+    }
+  }
+
 }
