--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3130,3 +3130,53 @@ main {
 }
 
 
+.button_close {
+  position: absolute;
+  top: 0.7em;
+  right: 0.7em;
+  width: 3em;
+  height: 3em;
+  padding: 0.7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.button_close:hover .close-icon::beefore,
+.button_close:hover .close-icon::after {
+  background-color: #b4e040;
+}
+.button_close:active .close-icon::beefore,
+.button_close:active .close-icon::after {
+  /* background-color: var(--bs-link-hover-color); */
+}
+.button_close .close-icon {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
+.close-icon::before,
+.close-icon::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  display: inline-block;
+  background-color: #ccc;
+  transition: background 0.2s ease-in-out;
+}
+
+.close-icon::before {
+  transform: rotate(-45deg);
+}
+.close-icon::after {
+  transform: rotate(45deg);
+}
+
+
