--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -612,7 +612,7 @@ main {
   width: 100%;
   height: 30rem;
   padding: 1rem;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("/public/assets/img/header-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
@@ -652,7 +652,7 @@ main {
   position: absolute;
   width: 2rem;
   height: 2rem;
-  background-image: url("../img/icon/arrow-square-down.svg");
+  background-image: url("/resources/assets/svg/arrow-square-down.svg");
   background-size: contain;
   background-repeat: no-repeat;
   right: 0;
@@ -693,7 +693,7 @@ main {
   width: 2rem;
   height: 2rem;
   position: absolute;
-  background-image: url("../img/icon/message-text.svg");
+  background-image: url("/resources/assets/svg/message-text.svg");
   background-size: contain;
   background-repeat: no-repeat;
   top: 50%;
