--- a/resources/css/layouts/selectMenu.css
+++ b/resources/css/layouts/selectMenu.css
@@ -1,9 +1,9 @@
 .header-city {
   position: relative;
 }
-.filters-city__label {}
+.select-menu__label {}
 .itc-select__toggle {}
-.filters-city__current {
+.select-menu__current {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -30,7 +30,7 @@
   -ms-user-select: none;
   user-select: none;
 }
-.filters-city__icon {
+.select-menu__icon {
   position: absolute;
   right: 1rem;
   -ms-flex-negative: 0;
@@ -42,24 +42,26 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.filters-city__icon.open {
+.select-menu__icon.open {
   transform: rotate(180deg);
 }
-.filters-city__list {
+.select-menu__list {
+  max-height: 350px;
   margin: 0;
   padding: 0;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
   list-style: none;
+  overflow: auto;
 }
-.filters-city__item {
+.select-menu__item {
   padding: 1.3rem 1.5rem;
   font-size: 1.5rem;
   font-family: "Open Sans", sans-serif;
   font-weight: 500;
 }
-.filters-city__item.selected {
+.select-menu__item.selected {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,7 +73,7 @@
   align-items: center;
   background-color: #e1f5fe;
 }
-.filters-city__item.selected::after {
+.select-menu__item.selected::after {
   width: 1.2rem;
   height: 1.2rem;
   color: #0277bd;
@@ -80,8 +82,8 @@
   background-repeat: no-repeat;
   content: "";
 }
-.filters-city__item.focused,
-.filters-city__item:hover {
+.select-menu__item.focused,
+.select-menu__item:hover {
   background-color: #f5f5f5;
   cursor: pointer;
   -webkit-transition: 0.2s background-color ease-in-out;
