--- a/resources/css/pages/shop.scss
+++ b/resources/css/pages/shop.scss
@@ -1,5 +1,6 @@
 @import "../variables.scss";
 @import "../components/display-rating.scss";
+@import "../layouts/similar.scss";
 
 .preview__slide img {
   /* width: max-content; */
